# eto-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  eto_Assert.hpp  main.cpp  main.cxx
cmake/: FindAssimp.cmake  FindGLFW.cmake  FindGLM.cmake
include/components/: CCamera.hpp  CFpsCamera.hpp
include/core/: Assert.hpp  ClassTypeId.hpp  Component.hpp  ComponentManager.hpp  ComponentPool.hpp  Entity.hpp  Entity.i  EntityManager.hpp  EntityManager.i  EventManager.hpp  GLFWevent.hpp  Input.hpp  Iterator.hpp  Range.hpp  System.hpp  SystemManager.hpp  Window.hpp
include/graphcis/: FPSCameraSystem.hpp  Renderer.hpp
include/graphcis/core/: Camera.hpp  Light.hpp  Renderable.hpp  ShaderProgram.hpp
include/internal/: Assert.hpp  Input.hpp  Reflection.hpp  ThreadPool.hpp  Window.hpp
include/resources/: AssetLoader.hpp  Model.hpp  ModelLoader.hpp  Resource.hpp  ResourceManager.hpp  Shader.hpp  ShaderLoader.hpp  Texture.hpp  TextureLoader.hpp
include/util/: FileStream.hpp
shaders/: default.fs  default.vs  lightSource.fs  no_textures.fs  no_textures.vs
src/components/: CCamera.cpp  CFpsCamera.cpp
src/core/: Assert.cpp  ComponentManager.cpp  Entity.cpp  EntityManager.cpp  Input.cpp  Iterator.cpp  Range.cpp  SystemManager.cpp  Window.cpp
src/graphic/: Renderer.cpp
src/graphic/core/: Camera.cpp  Light.cpp  Renderable.cpp  ShaderProgram.cpp
src/internal/: Assert.cpp  Input.cpp  ThreadPool.cpp  Window.cpp
src/resources/: AssetLoader.cpp  Model.cpp  ModelLoader.cpp  Resource.cpp  Shader.cpp  Texture.cpp  TextureLoader.cpp
src/util/: FileStream.cpp
tests/: tests-main.cpp
tests/core/: ComponentManager-tests.cpp  Entity-tests.cpp  EntityManager-tests.cpp  EventManager-tests.cpp  SystemManager-tests.cpp  Window-tests.cpp
tests/graphics/core/: Camera-tests.cpp  Renderable-tests.cpp
tests/internal/: Reflection-tests.cpp  ThreadPool-tests.cpp  Window-tests.cpp
tests/resources/: Model-tests.cpp  Shader-tests.cpp  Texture-tests.cpp  TextureLoader-tests.cpp
tests/util/: FileStream-tests.cpp
